fix: sql 관련 개선