@@ -20,18 +20,28 @@ import com.back.domain.party.partyPr.service.PartyPrService;
 import com.back.global.exception.ServiceException;
 import com.back.global.github.client.GithubAppClient;
 import lombok.RequiredArgsConstructor;
+import jakarta.persistence.EntityManager;
+import com.back.domain.party.github.entity.GithubAppInstallationStatus;
+import com.back.domain.party.position.entity.PartyStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.transaction.annotation.Propagation;
+import org.springframework.transaction.PlatformTransactionManager;
+import org.springframework.transaction.support.TransactionTemplate;
+import com.back.global.github.client.dtos.GithubPullRequestResponse;
 
-import java.util.HashSet;
+import java.util.ArrayList;
+import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.List;
-import java.util.Set;
 
 /** Party장과 GitHub App 설치 범위 접근 권한을 확인한 뒤 Party 단위 binding을 만든다. */
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class PartyGithubBindingService {
+    private final PlatformTransactionManager transactionManager;
+    private final EntityManager entityManager;
     private final PartyRepository partyRepository;
     private final GithubInstallationRepositoryRepository installationRepositoryRepository;
     private final PartyGithubBindingRepository bindingRepository;
@@ -45,6 +55,7 @@ public class PartyGithubBindingService {
     private final PartyPrService partyPrService;
     private final PartyGithubConnectionService connectionService;
 
+    @Transactional
     public List<GithubConnectableRepositoryDto> getConnectableRepositories(long partyId, Member actor) {
         Party party = party(partyId);
         ensureOwner(party, actor);
@@ -54,7 +65,6 @@ public class PartyGithubBindingService {
     @Transactional
     public List<GithubConnectableRepositoryDto> getConnectableRepositories(Member actor) {
         String token = userAuthorizationService.validAccessToken(actor);
-        Set<RepositoryKey> accessible = new HashSet<>();
         List<GithubAppUserRepositoryAccessService.AccessibleRepository> accessibleRepositories =
                 userRepositoryAccessService.repositories(token);
         // 앱이 서버 가동 전부터 설치돼 callback/webhook을 받지 못한 경우에도,
@@ -63,25 +73,56 @@ public class PartyGithubBindingService {
                 .map(GithubAppUserRepositoryAccessService.AccessibleRepository::installationId)
                 .distinct()
                 .forEach(installationInventoryService::syncInstallation);
-        for (GithubAppUserRepositoryAccessService.AccessibleRepository repository : accessibleRepositories) {
-            accessible.add(new RepositoryKey(repository.installationId(), repository.repositoryId()));
-        }
-        return installationRepositoryRepository.findAll().stream()
-                .filter(repository -> repository.getStatus() == GithubInstallationRepositoryStatus.AVAILABLE)
-                .filter(repository -> accessible.contains(new RepositoryKey(
-                        repository.getInstallation().getInstallationId(), repository.getRepositoryId())))
-                .map(repository -> new GithubConnectableRepositoryDto(repository.getId(),
-                        repository.getInstallation().getInstallationId(), repository.getRepositoryId(), repository.getFullName(),
-                        "https://github.com/" + repository.getFullName()))
-                .toList();
+        Map<Long, List<Long>> idsByInstallation = accessibleRepositories.stream().collect(Collectors.groupingBy(
+                GithubAppUserRepositoryAccessService.AccessibleRepository::installationId,
+                Collectors.mapping(GithubAppUserRepositoryAccessService.AccessibleRepository::repositoryId, Collectors.toList())));
+        List<GithubConnectableRepositoryDto> result = new ArrayList<>();
+        idsByInstallation.forEach((installationId, repositoryIds) -> {
+            List<Long> ids = repositoryIds.stream().distinct().toList();
+            // IN 절의 파라미터 수를 제한하고 installation/repository 쌍을 유지한다.
+            for (int start = 0; start < ids.size(); start += 500) {
+                installationRepositoryRepository.findAccessibleRepositories(installationId,
+                        ids.subList(start, Math.min(start + 500, ids.size())), GithubInstallationRepositoryStatus.AVAILABLE)
+                        .forEach(repository -> result.add(new GithubConnectableRepositoryDto(repository.getId(),
+                                installationId, repository.getRepositoryId(), repository.getFullName(),
+                                "https://github.com/" + repository.getFullName())));
+            }
+        });
+        return result;
     }
 
-    @Transactional
+    @Transactional(propagation = Propagation.NOT_SUPPORTED)
     public PartyGithubBindingDto connect(long partyId, long installationRepositoryId, Member actor) {
+        TransactionTemplate read = new TransactionTemplate(transactionManager);
+        read.setReadOnly(true);
+        RepositoryKey key = read.execute(ignored -> {
+            ensureOwner(party(partyId), actor);
+            var repository = installationRepositoryRepository.findWithInstallationById(installationRepositoryId)
+                    .orElseThrow(() -> new ServiceException("403-20", "GITHUB_APP_INSTALLATION_REPOSITORY_NOT_SELECTED"));
+            return new RepositoryKey(repository.getInstallation().getInstallationId(), repository.getRepositoryId(), repository.getFullName());
+        });
+        String token = userAuthorizationService.validAccessToken(actor);
+        boolean accessible = userRepositoryAccessService.repositories(token).stream().anyMatch(value ->
+                value.installationId() == key.installationId() && value.repositoryId() == key.repositoryId());
+        if (!accessible) throw new ServiceException("403-20", "GITHUB_REPOSITORY_ACCESS_REQUIRED");
+        String installationToken = githubAppClient.createInstallationToken(key.installationId());
+        List<GithubPullRequestResponse> pullRequests = githubAppClient.getAllPullRequests(installationToken, key.fullName());
+        // 외부 호출이 모두 끝난 후 잠금 아래에서 현재 상태와 중복 여부를 다시 검증한다.
+        return new TransactionTemplate(transactionManager).execute(ignored ->
+                connectWithLock(partyId, installationRepositoryId, actor, key, pullRequests));
+    }
+
+    private PartyGithubBindingDto connectWithLock(long partyId, long installationRepositoryId, Member actor,
+                                                  RepositoryKey key, List<GithubPullRequestResponse> pullRequests) {
         // 서로 다른 저장소를 같은 파티에 연결하는 요청도 중복 검사부터 커밋까지 직렬화한다.
         Party party = partyRepository.findByIdForUpdate(partyId)
                 .orElseThrow(() -> new ServiceException("404-1", "파티를 찾을 수 없습니다."));
+        // OSIV가 유지한 사전 조회 엔티티도 DB의 최신 상태로 검증한다.
+        entityManager.refresh(party);
         ensureOwner(party, actor);
+        if (party.getStatus() == PartyStatus.COMPLETED) {
+            throw new ServiceException("409-20", "PARTY_ALREADY_COMPLETED");
+        }
         // 신규 binding 도입 전 이미 연동된 Party는 DB 제약 오류가 아니라 명확한 도메인 오류를 돌려준다.
         if (legacyConnectionRepository.findByPartyId(partyId)
                 .filter(connection -> isActive(connection.getStatus())).isPresent()) {
@@ -93,17 +134,16 @@ public class PartyGithubBindingService {
                     connectionService.markInstallationRequired(partyId);
                     throw new ServiceException("403-20", "GITHUB_APP_INSTALLATION_REPOSITORY_NOT_SELECTED");
                 });
+        entityManager.refresh(repository);
+        entityManager.refresh(repository.getInstallation());
         if (repository.getStatus() != GithubInstallationRepositoryStatus.AVAILABLE) {
             throw new ServiceException("409-20", "GITHUB_INSTALLATION_REPOSITORY_UNAVAILABLE");
         }
-        String token = userAuthorizationService.validAccessToken(actor);
-        boolean accessible = userRepositoryAccessService.repositories(token).stream().anyMatch(value ->
-                value.installationId() == repository.getInstallation().getInstallationId()
-                        && value.repositoryId() == repository.getRepositoryId());
-        if (!accessible) {
-            auditRepository.save(new PartyGithubBindingAudit(party, repository, actor,
-                    PartyGithubBindingAuditAction.CONNECTION_REJECTED, "GITHUB_REPOSITORY_ACCESS_REQUIRED"));
-            throw new ServiceException("403-20", "GITHUB_REPOSITORY_ACCESS_REQUIRED");
+        if (repository.getInstallation().getStatus() != GithubAppInstallationStatus.ACTIVE
+                || repository.getInstallation().getInstallationId() != key.installationId()
+                || repository.getRepositoryId() != key.repositoryId()
+                || !repository.getFullName().equals(key.fullName())) {
+            throw new ServiceException("409-20", "GITHUB_INSTALLATION_REPOSITORY_CHANGED");
         }
         if (bindingRepository.findByPartyIdAndStatus(partyId, PartyGithubBindingStatus.ACTIVE).isPresent()
                 || bindingRepository.findByPartyIdAndStatus(partyId, PartyGithubBindingStatus.SYNCING).isPresent()) {
@@ -121,9 +161,7 @@ public class PartyGithubBindingService {
         PartyGithubBinding binding = bindingRepository.save(new PartyGithubBinding(party, repository, actor));
         auditRepository.save(new PartyGithubBindingAudit(party, repository, actor,
                 PartyGithubBindingAuditAction.CONNECTED, null));
-        String installationToken = githubAppClient.createInstallationToken(repository.getInstallation().getInstallationId());
-        partyPrService.syncExistingPullRequests(party,
-                githubAppClient.getAllPullRequests(installationToken, repository.getFullName()));
+        partyPrService.syncExistingPullRequests(party, pullRequests);
         binding.activate();
         return new PartyGithubBindingDto(binding);
     }
@@ -162,6 +200,6 @@ public class PartyGithubBindingService {
         return status == PartyGithubConnectionStatus.ACTIVE || status == PartyGithubConnectionStatus.SYNCING;
     }
 
-    private record RepositoryKey(long installationId, long repositoryId) {
+    private record RepositoryKey(long installationId, long repositoryId, String fullName) {
     }
 }
